--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
     "cypress": "^14.5.3",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.1",
+    "eslint-plugin-cypress": "^4.3.0",
     "eslint-plugin-jest": "^27.6.1",
     "eslint-plugin-react": "^7.33.2",
     "history": "^5.3.0",
@@ -57,6 +58,8 @@
   },
   "jest": {
     "testEnvironment": "jsdom",
-    "testPathIgnorePatterns": ["cypress/e2e"]
+    "testPathIgnorePatterns": [
+      "cypress/e2e"
+    ]
   }
 }
