--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@babel/preset-react": "^7.23.3",
     "@testing-library/jest-dom": "^6.2.0",
     "@testing-library/react": "^14.1.2",
+    "ajv": "^8.12.0",
+    "ajv-keywords": "^5.1.0",
     "babel-jest": "^29.7.0",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
