--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "test": "jest",
     "eslint": "eslint src --ext .js,.jsx",
     "build": "webpack --mode production",
-    "test:e2e": "cypress run",
-    "test:e2e:ci": "APP_ENV=ci cypress run"
+    "test:e2e": "cypress run"
   },
   "repository": {
     "type": "git",
