--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -31,7 +31,9 @@ jobs:
           start: npm run start-prod
           wait-on: http://localhost:5000
       - name: Trigger deployment
-        if: ${{ github.event_name == 'push' }}
+        env:
+          CONDITION: ${{ contains(join(github.event.commits.*.message, ' '), '#skip') }}
+        if: ${{ github.event_name == 'push' && env.CONDITION == 'false'}}
         run: |
           curl -X GET \
             -H "Accept: application/json" \
@@ -46,10 +48,10 @@ jobs:
       with:
         fetch-depth: '0'  
     - name: Bump version and push tag
-      if: ${{ github.event_name == 'push' }}
-      uses: anothrNick/github-tag-action@1.73.0
-
       env:
+        CONDITION: ${{ contains(join(github.event.commits.*.message, ' '), '#skip') }}
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         DEFAULT_BUMP: patch
+      if: ${{ github.event_name == 'push'  && env.CONDITION == 'false'}}
+      uses: anothrNick/github-tag-action@1.73.0
         
