--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -16,8 +16,8 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: '20'
-      - name: Always fail (for testing)
-        run: exit 1
+      # - name: Always fail (for testing)
+      #   run: exit 1
       - name: Install dependencies
         run: npm install
       - name: Check style
