--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -16,8 +16,8 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: '20'
-      # - name: Always fail (for testing)
-      #   run: exit 1
+      - name: Always fail (for testing)
+        run: exit 1
       - name: Install dependencies
         run: npm install
       - name: Check style
@@ -46,7 +46,7 @@ jobs:
         run: |
           curl -X POST ${{ secrets.DISCORD_WEBHOOK }} \
           -H "Content-Type: application/json" \
-          -d '{"content": "✅ Deployment succeeded!"}'
+          -d '{"content": "✅ Deployment succeeded!- by alkisax"}'
 
   tag_release:
     needs: [simple_deployment_pipeline]
@@ -74,4 +74,4 @@ jobs:
         run: |
           curl -X POST ${{ secrets.DISCORD_WEBHOOK }} \
           -H "Content-Type: application/json" \
-          -d '{"content": "❌ Build or tests failed!"}'
+          -d '{"content": "❌ Build or tests failed!- by alkisax"}'
