--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -48,6 +48,14 @@ jobs:
           -H "Content-Type: application/json" \
           -d '{"content": "✅ Deployment succeeded!- by alkisax"}'
 
+      - name: Check the deployed service URL
+        uses: jtalk/url-health-check-action@v4
+        with:
+          url: https://pokedex-deleteme.onrender.com
+          follow-redirect: true
+          max-attempts: 5
+          retry-delay: 10s
+
   tag_release:
     needs: [simple_deployment_pipeline]
     runs-on: ubuntu-latest
